cmss/main/default/objects/ConsolidationResult__c/ConsolidationResult__c.object-meta.xml
<CustomObject>
    <label>Consolidation Result</label>
    <nameField>
        <label>Consolidation Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidation Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>