cmss/main/default/objects/ConsolidationResult__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consolidation Results</relationshipLabel>
    <relationshipName>ConsolidationResults</relationshipName>
    <type>Lookup</type>
</CustomField>