cmss/main/default/objects/ConsolidationResult__c/fields/ClientSourceSystem__c.field-meta.xml
<CustomField>
    <fullName>ClientSourceSystem__c</fullName>
    <label>Client Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>