cmss/main/default/objects/ConsolidationResult__c/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>