cmss/main/default/objects/ConsolidationResult__c/fields/CSID__c.field-meta.xml
<CustomField>
    <fullName>CSID__c</fullName>
    <label>CS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>