cmss/main/default/objects/ConsolidationResult__c/fields/NewGlobalID__c.field-meta.xml
<CustomField>
    <fullName>NewGlobalID__c</fullName>
    <label>New Global ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>