cmss/main/default/objects/ConsolidationResult__c/fields/OldGlobalID__c.field-meta.xml
<CustomField>
    <fullName>OldGlobalID__c</fullName>
    <label>Old Global ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>