cmss/main/default/objects/ConsolidationResult__c/fields/SBID__c.field-meta.xml
<CustomField>
    <fullName>SBID__c</fullName>
    <label>SB ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>