cmss/main/default/objects/ConsolidationResult__c/listViews/AllConsolidationResult.listView-meta.xml
<ListView>
    <fullName>AllConsolidationResult</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedOn__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Výsledky konsolidace</label>
</ListView>